		same names.
	Fix to FloatVectorSpecies: it now checks to see if the genome length was defined
	All examples in ecsuite now run for 1000 generations
	Revisions to SteadyStateEvolutionState's main loop to be more consistent with the
		SimpleEvolutionState loop:  checkpointing now occurs immediately after
		increasing the generation; and postEvaluationStatistics and
		generationBoundaryStatistics now happen at the top of the loop.
	evolve.RandomRestarts now restarts on either preEvaluationStatistics or
		generationBoundaryStatistics
	Bug fix in all VectorIndivdual subclasses' setGenomeLength: was bombing
	Updates to VectorSpecies, IntegerVectorSpecies, and FloatVectorSpecies which
		does additional warnings (and reduces certain warnings) when doing
		min/max gene access when doing dynamic initialization.
	VectorIndividual.genomeLength() now returns an int
	Added ec/gp/ge package and ec/gp/ge/breed package.  These packages are initial
		versions: expect them to be updated
	Added ec/app/ant/ge.params and ec/app/ant/ant.grammar for GE version of Ant
	Added ec/app/regression/ge.params and ec/app/regression/regression.grammar for
		GE version of Regression
	Added ec/vector/GeneDuplicationPipeline.java
	Major change to ADF naming.  ADF's name argument must now be descriptive, such
		as "ADF0" rather than "0".  When an ADF is printed out, it used to be
		printed as "ADF" + name + "[" + tree + "]".  It's now just printed as
		name().  The 'functionName' instance variable is renamed to 'name', and
		the name() function is introduced which by default returns just 'name'.
		The toString() function by default calls name().
	Major change to ADFArgument nameing.  ADFArgument now has a 'name' instance
		variable and function like ADF does above, and toString() now simply
		calls name() (rather than what it used to do, which is return 
		"ARG"+argument).  This 'name' instance is set with the same parameter
		as ADF's naming mechanism: the 'name' parameter.